// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagList > hide items after maxLength 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              provider
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              database
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="provider"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                provider
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="database"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                database
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_1s_"
        aria-describedby="_r_1s_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_4_"
        aria-describedby="_r_4_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              very
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="very"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                very
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="item"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="item"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="item"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="item"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_44_"
        aria-describedby="_r_44_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +50
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      />
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway is the best cloud provider ever invented"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway is the best cloud provider ever invented
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_12_"
        aria-describedby="_r_12_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      />
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_v_"
        aria-describedby="_r_v_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly when maxLength is smaller than first tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <div
          aria-controls="_r_2a_"
          aria-describedby="_r_2a_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <div
            class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <button
              class="styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
              data-testid=""
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </button>
          </div>
        </div>
        <div
          aria-controls="_r_2c_"
          aria-describedby="_r_2c_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <div
            class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <button
              class="ellipsed styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
              data-testid=""
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            aria-controls="_r_26_"
            aria-describedby="_r_26_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <div
              class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
                data-testid="scaleway"
              >
                <span
                  class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  scaleway
                </span>
              </button>
            </div>
          </div>
          <div
            aria-controls="_r_28_"
            aria-describedby="_r_28_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <div
              class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
                data-testid="cloud"
              >
                <span
                  class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  cloud
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_q_"
        aria-describedby="_r_q_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_17_"
        aria-describedby="_r_17_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with icons 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      >
        <div
          aria-controls="_r_2i_"
          aria-describedby="_r_2i_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <div
            class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <button
              class="styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
              data-testid=""
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </button>
          </div>
        </div>
        <div
          aria-controls="_r_2k_"
          aria-describedby="_r_2k_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <div
            class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <button
              class="ellipsed styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
              data-testid=""
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            aria-controls="_r_2e_"
            aria-describedby="_r_2e_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <div
              class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
                data-testid="scaleway"
              >
                <span
                  class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  scaleway
                </span>
              </button>
            </div>
          </div>
          <div
            aria-controls="_r_2g_"
            aria-describedby="_r_2g_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <div
              class="styles_copiable__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp3 styles__d6zknp5 styles_copiable_true__d6zknp6 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph styles_undefined_compound_2__d6zknpk"
                data-testid="cloud"
              >
                <span
                  class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  cloud
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles_multiline_true__1f9zr5y3 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2 styles_multiline_true__1f9zr5y3"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_25_"
        aria-describedby="_r_25_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: hidden;"
    >
      <div
        class="styles__1f9zr5y2"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 0px;"
      />
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with placement 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
      style="visibility: visible;"
    >
      <div
        class="styles__1f9zr5y2 styles__1f9zr5y4"
        data-testid="taglist-container"
        style="--_1f9zr5y0: 50px;"
      >
        <div
          class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content;"
        >
          <span
            class="ellipsed styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
            data-testid=""
          >
            <span
              class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        style="position: absolute; visibility: hidden; white-space: nowrap; pointer-events: none;"
      >
        <div
          class="styles__1f9zr5y2"
          data-testid="taglist-measure-container"
        >
          <div
            class="styles_notCopiable__d6zknp1 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp4 styles__d6zknp5 styles_sentiment_neutral__d6zknpb styles_isButton_false__d6zknph"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp13 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-controls="_r_9_"
        aria-describedby="_r_9_"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="styles__1f9zr5y6"
          data-testid="taglist-open"
          tabindex="0"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
